[metadata]
name = sdc

[options]
packages = sdc
install_requires=
    diffusers>=0.2.4
    typer>=0.4.2
    rich>=12.5.1
    ray>=2.0.0
    transformers>=4.21.2
    ftfy>=6.0.3
    scipy>=1.7.3
    typing_extensions;python_version<'3.7'




[options.entry_points]
console_scripts = 
    stable-diffusion = sdc.cli:app
